--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NESThair</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://bankoharu.github.io/dipository_name/stylesheet.css">
 </head>
 
 <body>
